--- a/project/index.html
+++ b/project/index.html
@@ -213,8 +213,75 @@
       </div>
     </div>
   </div>
-  <div class="about-container container-fluid min-vh-100">
-
+  <div class="about-container container-fluid d-flex align-items-center p-4">
+    <div class="row">
+      <div class="col-12 col-lg-4">
+          <div class="about-image"></div>
+      </div>
+      <div class="col-12 col-lg-8 d-flex align-items-center justify-content-center" >
+        <div class="w-75 about-text-container">
+          <h1 class="font-weight-bolder display-3">Tusted Since in 2001</h1>
+          <h4 class="font-weight-bolder mb-4">We are Travel Agent</h4>
+          <div style="border: 2px solid var(--primary);" class="about-ladder">
+            <div class="bg-primary d-flex align-items-center text-white"  style="font-size: 3rem;"><i class="fas fa-plane text-white mr-2"></i>Flight</div>
+            <div class="d-flex align-items-center" style="font-size: 3rem;"><i class="fas fa-car text-white mr-2" ></i>Car</div>
+            <div class="d-flex align-items-center" style="font-size: 3rem;"><i class="fas fa-hotel text-white mr-2"></i>Hotel</div>
+          </div>
+          <p class="mt-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit dolorem dolore cumque minima, explicabo,
+             laboriosam voluptatibus necessitatibus, deserunt quibusdam
+             animi possimus ab incidunt veniam doloremque pariatur vero recusandae exercitationem ullam!
+             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Magnam, perferendis possimus adipisci omnis consequuntur rem suscipit
+               ullam ducimus maiores tempore dolor nihil.
+          </p>
+          <button class="btn btn-primary btn-outline-none" style="width: 160px;">CLICK HERE</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="blog-container container-fluid" style="background-color: #e9ecef;">
+    <div class="row">
+      <div class="col-12 py-3">
+       
+            <div class="col-12 w-100 d-flex flex-column align-items-center">
+              <h1 class="font-weight-bolder text-dark rounded px-1 display-4">PACK AND GO</h1>
+              <h5 class=" text-dark rounded px-1 font-weight-bolder">Awesome Tours</h5>
+            </div>
+          
+        </div>
+      <div class="col-12 ">
+        <div class="d-flex w-100 justify-content-around package-container align-items-center">
+          <div class="card" style="width: 25rem;">
+            <img src="../theme/lucas-law-JgH1FY3EqEY-unsplash.jpg" class="card-img-top" alt="..." style="height: 265px;">
+            <div class="card-body text-center">
+              <p>7 days+6 Night</p>
+              <h1 class="card-title font-weight-bolder">NewYork + Paris</h1>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 25rem;">
+            <img src="../theme/home-site.jpg" class="card-img-top" alt="..." style="height: 265px;">
+            <div class="card-body text-center">
+              <p>7 days+6 Night</p>
+              <h1 class="card-title font-weight-bolder">NewYork + Paris</h1>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 25rem;">
+            <img src="../theme/pexels-ralph-burrows-5035655.jpg" class="card-img-top" alt="..." style="height: 265px;">
+            <div class="card-body text-center">
+              <p>7 days+6 Night</p>
+              <h1 class="card-title font-weight-bolder">NewYork + Paris</h1>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
